# criterion

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  main.cpp  process.cpp  process.h  types.h
src/dds/: dds_backing.cpp  dds_backing.h
src/dff/: clump.cpp  clump.h  dff.cpp  dff.h  extension.cpp  extension.h  frames.cpp  frames.h  geometry.cpp  geometry.h
src/img/: data_entry.cpp  data_entry.h  directory_entry.cpp  directory_entry.h  helper.cpp  img.cpp  img.h
src/txd/: texture.cpp  texture.h  textures_container.cpp  textures_container.h  txd.cpp  txd.h
